--- a/index.html
+++ b/index.html
@@ -4,8 +4,232 @@
         <meta charset="UTF-8">
         <title>Todo</title>
         <link rel="shortcut icon" type="image/png" href="/src/resources/img/todo-icon.png"/>
+        <link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.min.css"/>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" type="text/css" href="main.css"/>
     </head>
-    <body>
-        
+    <body id="page-top">
+        <!-- Navbar -->
+        <nav class="navbar sticky-top navbar-inverse bg-custom navbar-toggleable-md">
+            <div class="container">
+                <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+                        data-target="#navbarsExampleContainer" aria-controls="navbarsExampleContainer"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <a class="navbar-brand" href="#">Todo X</a>
+
+                <div class="collapse navbar-collapse" id="navbarsExampleContainer">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#todo-list"><i class="fa fa-list"></i>&nbsp;Todo list</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#finished-todos"><i class="fa fa-list"></i>&nbsp;Finished
+                                todos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="" data-toggle="modal" data-target="#addNewTodoModal"><i
+                                    class="fa fa-plus"></i>&nbsp;New Todo</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown02"
+                               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Categories</a>
+                            <div class="dropdown-menu" aria-labelledby="dropdown02" id="category-list">
+                            </div>
+                        </li>
+                    </ul>
+                    <form class="form-inline my-2 my-md-0">
+                        <input class="form-control mr-sm-2" type="text" placeholder="Search">
+                        <button id="search-btn" class="btn btn-outline-success my-2 my-sm-0" type="submit">Search
+                        </button>
+                    </form>
+                </div>
+            </div>
+        </nav>
+        <header>
+            <div class="container-fluid home-page-title">
+                <h1 class="text-center main-header-title">Todo X</h1>
+            </div>
+        </header>
+
+        <!-- Todos -->
+        <section id="todo-list">
+            <div class="container-fluid">
+                <br/>
+                <h1 class="text-center">Todo list</h1>
+                <hr class="star-light">
+                <br/>
+                <div class="alert alert-success hidden-xs-up" role="alert">
+                    <strong>Well done!</strong> You create a new todo.
+                </div>
+                <div class="row todo-list"></div>
+            </div>
+        </section>
+
+        <!-- Finished todos  -->
+        <section id="finished-todos">
+            <div class="container-fluid finished-todos">
+                <br/>
+                <h1 class="text-center">Finished todos</h1>
+                <hr class="star-primary">
+                <br/>
+                <div class="alert alert-success hidden-xs-up" role="alert">
+                    <strong>Well done!</strong> You create a new todo.
+                </div>
+                <div class="row finished-todo-list"></div>
+            </div>
+        </section>
+
+        <!-- Add new Todo Modal -->
+        <div class="modal fade" id="addNewTodoModal" tabindex="-1" role="dialog" aria-labelledby="addNewTodoModalLabel"
+             aria-hidden="true">
+            <div class="modal-dialog modal-lg" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="addNewTodoModalLabel">Add new todo</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="form-group row">
+                            <label for="todo-title" class="col-2 col-form-label">Title</label>
+                            <div class="col-10">
+                                <input class="form-control" type="text" placeholder="Todo title" id="todo-title"/>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="todo-category" class="col-2 col-form-label">Category</label>
+                            <div class="col-10">
+                                <select class="form-control" type="" id="todo-category">
+                                    <option readonly="readonly">Please choose a category</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="todo-link-name" class="col-2 col-form-label">Link&nbsp;name</label>
+                            <div class="col-10">
+                                <input class="form-control" type="text" placeholder="your link name..."
+                                       id="todo-link-name">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="todo-url" class="col-2 col-form-label">Link&nbsp;url</label>
+                            <div class="col-10">
+                                <input class="form-control" type="url" placeholder="your link url..." id="todo-url">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="todo-desc" class="col-2 col-form-label">Todo&nbsp;description</label>
+                            <div class="col-10">
+                                <input class="form-control" type="text" placeholder="todo description..."
+                                       id="todo-desc">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="todo-time" class="col-2 col-form-label">Todo&nbsp;time</label>
+                            <div class="col-10">
+                                <input class="form-control" type="time" placeholder="todo date..." id="todo-time">
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-warning" data-dismiss="modal">Cancel</button>
+                            <button id="save-todo-btn" type="button" class="btn btn-success">Save Todo</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Add new Category Modal -->
+        <div class="modal fade" id="addNewCategoryModal" tabindex="-1" role="dialog"
+             aria-labelledby="addNewCategoryModalLabel"
+             aria-hidden="true">
+            <div class="modal-dialog modal-lg" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="addNewCategoryModalLabel">Add new category</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="form-group row">
+                            <label for="category-name" class="col-2 col-form-label">Category&nbsp;name</label>
+                            <div class="col-10">
+                                <input class="form-control" type="text" placeholder="category name..."
+                                       id="category-name">
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-warning" data-dismiss="modal">Cancel</button>
+                            <button id="save-category-btn" type="button" class="btn btn-success">Save Category
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Delete Category Modal -->
+        <div class="modal fade" id="deleteCategoryModal" tabindex="-1" role="dialog"
+             aria-labelledby="deleteCategoryModalLabel"
+             aria-hidden="true">
+            <div class="modal-dialog modal-lg" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="deleteCategoryModalLabel">Delete category</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="form-group row">
+                            <label for="category-name" class="col-2 col-form-label">Category&nbsp;name</label>
+                            <div class="col-10">
+                                <input class="form-control" type="text" placeholder="category name..."
+                                       id="delete-category-name">
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-warning" data-dismiss="modal">Cancel</button>
+                            <button id="delete-category-btn" type="button" class="btn btn-danger">Delete Category
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Footer -->
+        <footer class="text-center footer">
+            <div class="footer-below">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-md-12 footer-icons">
+                            <a href="https://github.com/badam1" target="_blank" class="fa fa-github">&nbsp;</a>
+                            <a href="http://progmasters-gitlab.westeurope.cloudapp.azure.com/bodansky.adam"
+                               target="_blank" class="fa fa-gitlab">&nbsp;</a>
+                            <a href="https://www.facebook.com/adam.bodansky" target="_blank" class="fa fa-facebook"></a>
+                        </div>
+                        <div class="col-lg-12 footer">
+                            Copyright &copy; <a href="https://adam.progmasters.net"
+                                                target="_blank">adam.progmasters.net</a> 2017
+                            <br/>
+                            <a class="fa fa-chevron-up" href="#page-top"></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
+
+        <!-- scripts  -->
+        <script src="node_modules/jquery/dist/jquery.min.js"></script>
+        <script src="node_modules/tether/dist/js/tether.min.js"></script>
+        <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script src="app.js"></script>
     </body>
 </html>
