- new Todo - embed iframe youtube video

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         <div class="form-group row">
                             <label for="todo-category" class="col-2 col-form-label">Category</label>
                             <div class="col-10">
-                                <select name="category" class="form-control" type="" id="todo-category">
+                                <select name="category" class="form-control" type="text" id="todo-category">
                                     <option readonly="readonly">Please choose a category</option>
                                 </select>
                             </div>
@@ -136,7 +136,7 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-warning" data-dismiss="modal">Cancel</button>
-                            <button id="save-todo-btn" type="button" class="btn btn-success">Save Todo</button>
+                            <button id="save-todo-btn" type="button" data-dismiss="modal" class="btn btn-success">Save Todo</button>
                         </div>
                     </div>
                 </div>
