- category add, remove - todo add, remove - category search - alerts

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <h1 class="text-center">Todo list</h1>
                 <hr class="star-light">
                 <br/>
-                <div class="row todo-list"></div>
+                <div id="todo-list-div" class="row todo-list"></div>
             </div>
         </section>
 
@@ -71,7 +71,7 @@
                 <h1 class="text-center">Finished todos</h1>
                 <hr class="star-primary">
                 <br/>
-                <div class="row finished-todo-list"></div>
+                <div id="finished-todo-list-div" class="row finished-todo-list"></div>
             </div>
         </section>
 
