--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                     </ul>
                     <form class="form-inline my-2 my-md-0">
                         <input id="search" class="form-control mr-sm-2" type="text" placeholder="Search">
-                        <button id="search-btn" class="btn btn-outline-success my-2 my-sm-0">Search
-                        </button>
+                        <p id="search-btn" class="btn btn-outline-success my-2 my-sm-0">Search
+                        </p>
                     </form>
                 </div>
             </div>
